feat: make ansible content reusable

--- a/deploy-docker-role.yaml
+++ b/deploy-docker-role.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Wait for ssh connection
-  hosts: all
+  hosts: ansible-webserver
   gather_facts: False
   tasks:
     - name: Ensure ssh port open
@@ -15,7 +15,7 @@
         ansible_python_interpreter: /usr/bin/python3
 
 - name: Install Docker
-  hosts: all
+  hosts: ansible-webserver
   become: yes
   gather_facts: true
   tasks:
@@ -33,7 +33,7 @@
 
     - name: Install Docker-compose
       ansible.builtin.get_url:
-        url: https://github.com/docker/compose/releases/download/1.27.4/docker-compose-Linux-{{lookup('pipe', 'uname -m')}}
+        url: https://github.com/docker/compose/releases/download/v2.23.3/docker-compose-Linux-{{lookup('pipe', 'uname -m')}}
         dest: /usr/local/bin/docker-compose
         mode: +x
 
@@ -48,7 +48,7 @@
           - docker-compose
 
 - name: Add ubuntu user to docker group
-  hosts: all
+  hosts: ansible-webserver
   become: yes
   tasks:
     - name: Add ubuntu user to docker group
@@ -59,9 +59,13 @@
     - name: Reconnect to server session
       ansible.builtin.meta: reset_connection
 
+- name: Create a new user
+  become: yes
+  hosts: webserver
+  roles:
+    - create_user
+
 - name: Start docker containers
-  hosts: all
-  vars_files:
-    - project-vars
+  hosts: ansible-webserver
   roles:
     - start_containers
